--- a/client/src/Styles/index.css
+++ b/client/src/Styles/index.css
@@ -13,22 +13,15 @@
   max-width: 11rem;
   filter: invert(8%) sepia(100%) saturate(7445%) hue-rotate(248deg) brightness(93%) contrast(144%);
 }
-#card #additional {
-  transition: width 0.4s;
+.more-info-show{
+  height: 0%;
   overflow: hidden;
-  z-index: 2;
+  display: none;
+  transition: display 0.6s;
 }
-/* #card:hover #more-info {
-width: 75%;
-transition: width 0.6s;
-padding: 1rem;
-} */
-#card #more-info {
-background-color: rgb(82, 168, 238);
-width: 75%;
-z-index: 3;
+#user-card img {  
+  max-width: none !important;
 }
-
 #card #additional #user-card::after {
   content: "";
   display: block;
